# https-github-dhuuxa26-.com-reptile-

./: .env.example  .eslintrc.json  .gitignore  .replit  LICENSE  PROJECT_STRUCTURE.md  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  replit.md  server.js  tsconfig.backend.json  tsconfig.frontend.json  tsconfig.json  vite.config.ts
.github/workflows/: codeql.yml
src/backend/: server.ts
src/frontend/: App.tsx
src/frontend/styles/: App.css  index.css
src/shared/constants/: index.ts
src/shared/types/: index.ts
templates/: api_docs.html  base.html  codes.html  generate.html  index.html  statistics.html  validate.html
